[gd_scene load_steps=5 format=3 uid="uid://bfaxn5ntdic38"]

[ext_resource type="Texture2D" uid="uid://cu4p5yk6h2c6x" path="res://assets/eamonn/logo.png" id="1"]
[ext_resource type="Script" path="res://ui/SpawnMenu.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b034unctdllmp" path="res://assets/documerica_pd/A_HUNDRED-MILE_RIBBON_OF_SAND_DUNES_SEPARATES_THE_CHOCOLATE_MOUNTAINS_OF_SOUTHERN_CALIFORNIA_FROM_THE_IMPERIAL..._-_NARA_-_547717.jpg" id="3"]
[ext_resource type="Texture2D" uid="uid://bngmgoatt13xw" path="res://assets/eamonn/darken.png" id="4"]

[node name="SpawnMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3")
expand_mode = 5

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -148.0
offset_right = 311.0
offset_bottom = 270.0
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -288.0
offset_right = 300.0
offset_bottom = 421.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("1")
stretch_mode = 1

[node name="Selection" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="VehicleSelect" type="VBoxContainer" parent="VBoxContainer/Selection"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Selection/VehicleSelect"]
layout_mode = 2
text = "Vehicle"

[node name="MenuButton" type="OptionButton" parent="VBoxContainer/Selection/VehicleSelect"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Desc" type="RichTextLabel" parent="VBoxContainer/Selection/VehicleSelect"]
layout_mode = 2
bbcode_enabled = true

[node name="PrimaryWeaponSelect" type="VBoxContainer" parent="VBoxContainer/Selection"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Selection/PrimaryWeaponSelect"]
layout_mode = 2
text = "Primary"

[node name="MenuButton" type="OptionButton" parent="VBoxContainer/Selection/PrimaryWeaponSelect"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Desc" type="RichTextLabel" parent="VBoxContainer/Selection/PrimaryWeaponSelect"]
layout_mode = 2
bbcode_enabled = true

[node name="SecondaryWeaponSelect" type="VBoxContainer" parent="VBoxContainer/Selection"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Selection/SecondaryWeaponSelect"]
layout_mode = 2
text = "Secondary"

[node name="MenuButton" type="OptionButton" parent="VBoxContainer/Selection/SecondaryWeaponSelect"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Desc" type="RichTextLabel" parent="VBoxContainer/Selection/SecondaryWeaponSelect"]
layout_mode = 2
bbcode_enabled = true

[node name="Mission" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(199, 150)
layout_mode = 2

[node name="Mission Select" type="Label" parent="VBoxContainer/Mission"]
layout_mode = 2
text = "Mission
"

[node name="MenuButton" type="OptionButton" parent="VBoxContainer/Mission"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Desc" type="RichTextLabel" parent="VBoxContainer/Mission"]
layout_mode = 2
bbcode_enabled = true

[node name="LaunchOptions" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer/LaunchOptions"]
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="VBoxContainer/LaunchOptions"]
layout_mode = 2
text = "quit"

[node name="ControllerOption" type="OptionButton" parent="VBoxContainer/LaunchOptions"]
layout_mode = 2

[connection signal="item_selected" from="VBoxContainer/Selection/VehicleSelect/MenuButton" to="." method="_on_Vehicle_selected"]
[connection signal="item_selected" from="VBoxContainer/Selection/PrimaryWeaponSelect/MenuButton" to="." method="_on_Primary_selected"]
[connection signal="item_selected" from="VBoxContainer/Selection/SecondaryWeaponSelect/MenuButton" to="." method="_on_Secondary_selected"]
[connection signal="item_selected" from="VBoxContainer/Mission/MenuButton" to="." method="_on_level_selected"]
[connection signal="pressed" from="VBoxContainer/LaunchOptions/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LaunchOptions/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/LaunchOptions/ControllerOption" to="." method="_on_ControllerOption_item_selected"]
